--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MRM Campaign</title>
+    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @*@Scripts.Render("~/bundles/jquery")*@
+
+    <link href="~/Content/Multi-Select/docsupport/prism.css" rel="stylesheet" />
+    <link href="~/Content/Multi-Select/chosen.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -19,12 +25,7 @@
                 <h1 style="color:#fff">@Html.ActionLink("MRM", "Index", "MasterCampaign", new { @style= "color:#fff; text-decoration:none" })</h1>
             </div>
             <div class="navbar-collapse collapse">
-                @*<ul class="nav navbar-nav" style="display:@ViewBag.Menu">
-                    <li>@Html.ActionLink("Master", "MasterCampaign", "MasterCampaign")</li>
-                    <li>@Html.ActionLink("Child", "ChildCampaign", "ChildCampaign")</li>
-                    <li>@Html.ActionLink("Tactic", "TacticCampaign", "TacticCampaign")</li>
-                    <li>@Html.ActionLink("Master Data", "MasterData", "MasterData")</li>
-                </ul>*@
+              
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -37,12 +38,10 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
-
-    <link href="~/Content/bootstrap-multiselect.css" rel="stylesheet" />
-    <script src="~/Scripts/bootstrap-multiselect.js"></script>
 </body>
 </html>
+<script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
+<script src="~/Content/Multi-Select/docsupport/init.js"></script>
