--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -70,95 +70,6 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label>Theme</label>  <br />
-                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id), new { @class = "chosen-select form-control" })
-                                </div>
-                            </div>
-                            <div class="col-md-6"><label>Start Date<span class="text-danger">*</span></label>
-                                <div class="form-group">
-                                    <div class="col-md-6 date datealign">
-                                        <div class="input-group input-append date" id="StartDate">
-                                            @Html.TextBoxFor(m => m.StartDate, new { @maxlength = "10", @class = "form-control" })
-                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                        </div>
-                                    </div>
-                                    <div class="validmsgSdate"></div>
-                            </div>
-                        </div>
-                            </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Business Group<span class="text-danger">*</span></label><br />
-                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id), new { @class = "chosen-select form-control" })
-                                    <div class="validmsgbusinesGp"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label>End Date<span class="text-danger">*</span></label>
-                                <div class="form-group">
-                                    <div class="col-md-6 form-group date datealign">
-                                        <div class="input-group input-append date" id="EndDate">
-                                            @Html.TextBoxFor(m => m.EndDate, new { @maxlength = "10", @class = "form-control" })
-                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="validmsgEdate"></div>
-                            </div>
-                        </div>
-
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Business Line<span class="text-danger">*</span></label><br />
-                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id), new { @class = "chosen-select form-control" })
-                                    <div class="validmsgbusinesLine"></div>
-                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                             
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Segment<span class="text-danger">*</span></label><br />
-                                    @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id), new { @class = "chosen-select form-control" })
-                                    <div class="validmsgbusinesSegment"></div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                              
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Industry<span class="text-danger">*</span></label><br />
-                                    @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id), new { @class = "chosen-select form-control" })
-                                    <div class="validmsgbusinesIndustry"></div>
-                                  </div>
-                            </div>
-                        </div>
-
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Geography</label><span class="text-danger">*</span><br />
-                                    @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), new { @class = "chosen-select form-control" })
-                                    <div class="validmsgbusinesGeography"></div>
-                                </div>
-                            </div>
-                           
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
                                     <label>Master Campaign Name<span class="text-danger">*</span></label>
                                     @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                     <div class="validmsgMaster"></div>
@@ -173,6 +84,106 @@
 
                             </div>
                         </div>
+
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Theme</label>  <br />
+                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id), new { @class = "chosen-select form-control" })
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Geography</label><span class="text-danger">*</span><br />
+                                    @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), new { @class = "chosen-select form-control" })
+                                    <div class="validmsgbusinesGeography"></div>
+                                </div>
+                            </div>
+
+
+
+                            </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Business Group<span class="text-danger">*</span></label><br />
+                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id), new { @class = "chosen-select form-control" })
+                                    <div class="validmsgbusinesGp"></div>
+                                </div>
+                            </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Segment<span class="text-danger">*</span></label><br />
+                                        @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id), new { @class = "chosen-select form-control" })
+                                        <div class="validmsgbusinesSegment"></div>
+                                    </div>
+                                </div>
+
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Business Line<span class="text-danger">*</span></label><br />
+                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id), new { @class = "chosen-select form-control" })
+                                    <div class="validmsgbusinesLine"></div>
+                                 </div>
+                            </div>
+                            <div class="col-md-6">
+
+
+                                <div class="form-group">
+                                    <label>Industry<span class="text-danger">*</span></label><br />
+                                    @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id), new { @class = "chosen-select form-control" })
+                                    <div class="validmsgbusinesIndustry"></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+
+                            <div class="col-md-6">
+                                <label>Start Date<span class="text-danger">*</span></label>
+                                <div class="form-group">
+                                    <div class="col-md-6 date datealign">
+                                        <div class="input-group input-append date" id="StartDate">
+                                            @Html.TextBoxFor(m => m.StartDate, new { @maxlength = "10", @class = "form-control" })
+                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                        </div>
+                                    </div>
+                                    <div class="validmsgSdate"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <label>End Date<span class="text-danger">*</span></label>
+                                <div class="form-group">
+                                    <div class="col-md-6 form-group date datealign">
+                                        <div class="input-group input-append date" id="EndDate">
+                                            @Html.TextBoxFor(m => m.EndDate, new { @maxlength = "10", @class = "form-control" })
+                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="validmsgEdate"></div><div class="validmsgDatecompare"></div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                
+                            </div>
+                        </div>
+
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                
+                            </div>
+                           
+                        </div>
+                       
                         <!-- /.row -->
                     </fieldset>
                                 </div>
@@ -191,7 +202,7 @@
                                         <button Id="btnsubmit" name="button" value="Save Draft" class="btn btn-block btn-primary btn-sm">Save Draft</button>
                                     </div>
                                     <div class="col-md-4">
-                                        <button Id="btnsubmit" name="button" value="Delete" class="btn btn-block btn-danger btn-sm">Delete</button>
+                                        <button Id="btnsubmit" name="button" value="Delete Draft" class="btn btn-block btn-danger btn-sm">Delete</button>
                                     </div>
                                 </div>
 
@@ -211,16 +222,34 @@
 
 <script>
 
+    $(document).ready(function () {
+        $('.chosen-single').chosen();
+     
+        
+        $(document).on("change", "#BusinessGroups_Id", function (e) {
+            var BusinessGroups_Id = $(this).find(":selected").val();
+
+            if (BusinessGroups_Id != 0) {
+                window.location.href = '/ChildCampaign/ChildCampaign?id=' + BusinessGroups_Id + '&_=' + (new Date()).getTime();
+            }
+        });
+   
+    });
+
+
  
     $('#StartDate').datepicker();
     $('#EndDate').datepicker();
 
+    $(document).ready(function () {
+        $('.chosen-single').chosen();
 
+    });
     function ValidateForm() {
         var flag = true;
         if ($('#BusinessGroups_Id').val() == null) {
 
-            $('.validmsgbusinesGp').text("Please select business group from drop-down").css("color", "#b94a48");
+            $('.validmsgbusinesGp').text("Please select Business Group").css("color", "#b94a48");
             $('.validmsgbusinesGp').show();
             flag = false;
 
@@ -231,7 +260,7 @@
 
         if ($('#BusinessLines_Id').val() == null) {
 
-            $('.validmsgbusinesLine').text("Please select business line from drop-down").css("color", "#b94a48");
+            $('.validmsgbusinesLine').text("Please select Business Line").css("color", "#b94a48");
             $('.validmsgbusinesLine').show();
             flag = false;
 
@@ -243,7 +272,7 @@
         
         if ($('#Segments_Id').val() == null) {
 
-            $('.validmsgbusinesSegment').text("Please select segment from drop-down").css("color", "#b94a48");
+            $('.validmsgbusinesSegment').text("Please select Segment").css("color", "#b94a48");
             $('.validmsgbusinesSegment').show();
             flag = false;
 
@@ -254,7 +283,7 @@
 
         if ($('#Industries_Id').val() == null) {
 
-            $('.validmsgbusinesIndustry').text("Please select industry from drop-down").css("color", "#b94a48");
+            $('.validmsgbusinesIndustry').text("Please select Industry").css("color", "#b94a48");
             $('.validmsgbusinesIndustry').show();
             flag = false;
 
@@ -266,7 +295,7 @@
 
         if ($('#Geographys_Id').val() == null) {
 
-            $('.validmsgbusinesGeography').text("Please select geography from drop-down").css("color", "#b94a48");
+            $('.validmsgbusinesGeography').text("Please select Geography").css("color", "#b94a48");
             $('.validmsgbusinesGeography').show();
             flag = false;
 
@@ -279,7 +308,7 @@
 
        
         if ($("#StartDate").find("input").val() == "") {
-            $('.validmsgSdate').text("Please select start date").css("color", "#b94a48");
+            $('.validmsgSdate').text("Please select Start Date").css("color", "#b94a48");
             $('.validmsgSdate').show();
             flag = false;
 
@@ -290,7 +319,7 @@
         }
         
         if ($("#EndDate").find("input").val() == "") {
-            $('.validmsgEdate').text("Please select end date").css("color", "#b94a48");
+            $('.validmsgEdate').text("Please select End Date").css("color", "#b94a48");
             $('.validmsgEdate').show();
             flag = false;
         }
@@ -300,13 +329,16 @@
         var startdate = new Date($("#StartDate").find("input").val());
         var enddate = new Date($("#EndDate").find("input").val());
         if (startdate > enddate) {
-            $('.validmsgEdate').text("End date can not less than start date").css("color", "#b94a48");
-            $('.validmsgEdate').show();
+            $('.validmsgDatecompare').text("End Date can not less than Start Date").css("color", "#b94a48");
+            $('.validmsgDatecompare').show();
             flag = false;
+        }
+        else {
+            $('.validmsgDatecompare').hide();
         }
 
         if ($('#Name').val() == "") {
-            $('.validmsgMaster').text("Please enter master campaign name").css("color", "#b94a48");
+            $('.validmsgMaster').text("Please enter Master Campaign Name").css("color", "#b94a48");
             $('.validmsgMaster').show();
             flag = false;
         }
@@ -315,7 +347,7 @@
         }
 
         if ($('#CampaignDescription').val() == "") {
-            $('.validmsgMasterDesc').text("Please enter master campaign description name").css("color", "#b94a48");
+            $('.validmsgMasterDesc').text("Please enter Master Campaign Description").css("color", "#b94a48");
             $('.validmsgMasterDesc').show();
             flag = false;
         }
@@ -323,7 +355,16 @@
         {
             $('.validmsgMasterDesc').hide();
         }
+        if ($('#Status').val() == "") {
+            $('.validmsgstatus').text("Please select Status").css("color", "#b94a48");
+            $('.validmsgstatus').show();
+            flag = false;
 
+        }
+        else {
+
+            $('.validmsgstatus').hide();
+        }
         if (flag == false)
         {
             return false;;
